--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </script>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<title>車輌番号入力</title>
+<title>テスト</title>
 <link href="img/common/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"><!--favicon-->
 <link href="web_font_notosans/font.css" rel="stylesheet" type="text/css" /><!--font-japanese-->
 <link href="web_font_Roboto-Condensed/font.css" rel="stylesheet" type="text/css" /><!--font-english-->
@@ -56,13 +56,13 @@
 			<img class="logo_title" src="img/common/illust_track_title.svg" alt="トラックアイコン">
 			TRUCKER VIEW
 		</div>
-		<form>
+<!-- 		<form>
 			<label>ヘッドID</label><input type="text" placeholder="ヘッドIDを入力">
 			<button class="submit">検索</button>
 		</form>
 		<div class="soundcheck no_repeat t_center">
 			音量確認ボタン
-		</div>
+		</div> -->
 		<div class="image">
 			<img src="img/port/img_shimizu.png" alt="清水港イメージ">
 		</div>
